--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="main.js"></script>
     <div id="main">
       <h2>
-          <button onClick="click(click_value)">Make Points</button>
+          <button onClick="points_up(bot)">Make Points</button>
         </br>
           Points: <span id="points">0</span>
         </br>
@@ -22,11 +22,6 @@
           Bot Cost: <span id="bot_cost">10</span>
         </br>
       </p>
-      <p>
-        <button onClick="buy_click()">Buy Click Upgrade</button> </br> 
-        Click Multiplier Cost: <span id ="click_cost">5</span> </br>
-        Click Multiplier is currently: <span id="click_value">1</span>
-      <p>
         <button onClick="buy_multi()">Buy Bot Multiplier</button> </br>
         Bot Multiplier Cost: <span id ="multi_cost">20</span> </br>
         Bot Multiplier is currently: <span id="multi">1</span>
