--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width">
     <title>Clicker</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <style>
+       body {
+          text-align: center;
+          background-color: darkgrey; 
+       }
+       #main {
+          margin: auto;
+          width: 25%;
+          border: 15px solid darkred;
+          padding: 10px;
+          background: black;
+          color: white; 
+      } 
+    </style> 
   </head>
   <body>
     <script src="main.js"></script>
